po: update po/sk_SK/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sk_SK/admin.po
+++ b/po/sk_SK/admin.po
@@ -5,12 +5,13 @@
 # Translators:
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # sat01 <sat01@seznam.cz>, 2013
+# Tibor Repček <tiborepcek@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-31 17:29+0000\n"
+"Last-Translator: Tibor Repček <tiborepcek@gmail.com>\n"
 "Language-Team: Slovak (http://www.transifex.com/civicrm/civicrm/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -244,7 +245,7 @@ msgstr "Typ lokality '%1' bol uložený."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Mail Account"
-msgstr ""
+msgstr "E-mailový účet"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Email Domain"
