po: update po/zh_CN/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/zh_CN/admin.po
+++ b/po/zh_CN/admin.po
@@ -9,14 +9,15 @@
 # Ji Ma <magic.maji@gmail.com>, 2014
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Summer <mordbiz@foxmail.com>, 2015
+# Wei Ziyang <doopsky@gmail.com>, 2016
 # zhiyong zhou <jxsky2002@163.com>, 2011
 # 陆西德 <hqcm2013@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-07 14:18+0000\n"
-"Last-Translator: 陆西德 <hqcm2013@gmail.com>\n"
+"PO-Revision-Date: 2016-07-31 17:08+0000\n"
+"Last-Translator: Wei Ziyang <doopsky@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/civicrm/civicrm/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1990,7 +1991,7 @@ msgstr "你确定要删除这个地图吗"
 
 #: CRM/Admin/Page/Mapping.php
 msgid "This operation cannot be undone."
-msgstr ""
+msgstr "此操作无法撤消"
 
 #: CRM/Admin/Page/Mapping.php
 msgid "Edit Mapping"
@@ -2182,70 +2183,70 @@ msgstr "合并标签"
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Permissions: Summary"
-msgstr ""
+msgstr "许可权：概览"
 
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Permissions: Details"
-msgstr ""
+msgstr "许可权：详情"
 
 #: ang/crmCxn/AdvTable.html
 msgid "Property"
-msgstr ""
+msgstr "属性"
 
 #: ang/crmCxn/ConfirmConnectCtrl.html
 msgid "The application, \\\"%1\\\", requests permission to access your system."
-msgstr ""
+msgstr "应用 “%1” 请求允许访问您的系统"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Are you sure you want to reconnect \\\"%1\\\"?"
-msgstr ""
+msgstr "你确定要重新连接“%1”？"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid ""
 "Reconnecting will change the connection details (such as callback URLs and "
 "permissions). This can be useful in a few cases, such as:"
-msgstr ""
+msgstr "重新连接将会修改链接信息（例如回掉地址和请求权限）。以下示例可能会帮到你，例如："
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After your site has migrated to a new URL."
-msgstr ""
+msgstr "将您的站点迁移至新地址后。"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has migrated to a new URL."
-msgstr ""
+msgstr "将应用迁移至新的地址后。"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has changed permission requirements."
-msgstr ""
+msgstr "修改应用的请求权限后。"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has a major failure or reset."
-msgstr ""
+msgstr "应用出现严重错误或重置后。"
 
 #: ang/crmCxn/Connectivity.html
 msgid ""
 "There was a problem verifying that this site is available on the public "
 "Internet."
-msgstr ""
+msgstr "验证错误，请检查您的互联网连接。"
 
 #: ang/crmCxn/Connectivity.html
 msgid "See also:"
-msgstr ""
+msgstr "请参阅："
 
 #: ang/crmCxn/Connectivity.html
 msgid "Firewalls and Proxies"
-msgstr ""
+msgstr "防火墙和代理"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid ""
 "Connections provide a simplified way to link your CiviCRM installation to an"
 " external service."
-msgstr ""
+msgstr "CiviCRM提供简单的方式链接到外部服务。"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Existing Connections"
-msgstr ""
+msgstr "现有的链接"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: About"
@@ -2303,7 +2304,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "New Connections"
-msgstr ""
+msgstr "新链接"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Connect"
@@ -3558,11 +3559,11 @@ msgstr "默认安装语言"
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid "Languages available to users of this installation."
-msgstr "用户按安装的可用语言"
+msgstr "用户安装的可用语言"
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid "Add a new language to this installation."
-msgstr "添加新的语言以安装"
+msgstr "安装新的语言"
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid "If checked, CiviCRM will follow CMS language changes."
