--- a/po/ar_EG/common-base.po
+++ b/po/ar_EG/common-base.po
@@ -5,6 +5,7 @@
 # Translators:
 # ajay <ajay.nimbolkar@webaccess.co.in>, 2011
 # enaam Zeg <enzeg@hotmail.com>, 2012
+# Grzegorz Grzywna <grzywna.g@gmail.com>, 2016
 # Hussein Ali <hussein.ali@gmail.com>, 2012
 # Maher Chebbi <maherdesign@hotmail.com>, 2012
 # Mohammad Bamya <m.bamya@ictca.com.au>, 2015
@@ -18,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-02 14:42+0000\n"
+"Last-Translator: Grzegorz Grzywna <grzywna.g@gmail.com>\n"
 "Language-Team: Arabic (http://www.transifex.com/civicrm/civicrm/language/ar/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20652,7 +20653,7 @@ msgstr "CiviCRM.org - إنماء العلاقات، والحفاظ عليها"
 
 #: templates/CRM/common/publicFooter.tpl
 msgid "empowered by %1"
-msgstr "ممكّن من 1%"
+msgstr "ممكّن من ‮%1"
 
 #: templates/CRM/common/recentlyViewed.tpl
 msgid "Recently Viewed:"
