--- a/po/ca_ES/report.po
+++ b/po/ca_ES/report.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-25 16:07+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-08-02 15:17+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1247,23 +1247,23 @@ msgstr "Entregat "
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Accepted Rate"
-msgstr ""
+msgstr "Índex d'acceptament"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Bounce Rate"
-msgstr "Taxa d'obertura"
+msgstr "Índex de rebots"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Confirmed Open Rate"
-msgstr ""
+msgstr "Índex d'obertures confirmades"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Click through Rate"
-msgstr ""
+msgstr "Proporció de clics"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Click to Open Rate"
-msgstr ""
+msgstr "Proporció de clics per obertures"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "For Chart view, please select at least one field from %1 OR %2."
