--- a/po/el_GR/queue.po
+++ b/po/el_GR/queue.po
@@ -3,14 +3,15 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Ioannis Ampatzis <ampatzis.ioannis@gmail.com>, 2016
 # kvisitor <kvisitor@gnugr.org>, 2013
 # Vangelis P. <v.pantazis@ixiam.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-02 21:30+0000\n"
+"Last-Translator: Ioannis Ampatzis <ampatzis.ioannis@gmail.com>\n"
 "Language-Team: Greek (http://www.transifex.com/civicrm/civicrm/language/el/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,4 +41,4 @@ msgstr "Εκτέλεση Ουράς"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue ID"
-msgstr ""
+msgstr "Κωδικός ID Ουράς"
