--- a/po/el_GR/countries.po
+++ b/po/el_GR/countries.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Ioannis Ampatzis <ampatzis.ioannis@gmail.com>, 2016
 # kvisitor <kvisitor@gnugr.org>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # xneo1 <vagelis@cyberdest.com>, 2012
@@ -11,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-08 22:32+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-02 21:29+0000\n"
+"Last-Translator: Ioannis Ampatzis <ampatzis.ioannis@gmail.com>\n"
 "Language-Team: Greek (http://www.transifex.com/civicrm/civicrm/language/el/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1042,8 +1043,8 @@ msgstr "Κοσσυφοπέδιο"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "Άγιος Βαρθολομαίος"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "Άγιος Μαρτίνος (γαλλικό τμήμα)"
