po: update po/de_DE/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/event.po
+++ b/po/de_DE/event.po
@@ -30,7 +30,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-17 10:43+0000\n"
+"PO-Revision-Date: 2016-08-02 13:47+0000\n"
 "Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -2276,7 +2276,7 @@ msgid ""
 "\"Additional Participants\". For example, you may want to require an email "
 "address from the person entering the registration while not requiring (or "
 "even requesting) emails for additional participants (i.e. their \"guests\")."
-msgstr "Sie können verschiedene Profile für die Person, als für \"Zusätzliche Teilnehmer\" registriert ist zu verwenden. Zum Beispiel können Sie eine E-Mail -Adresse aus der Person, die in die Registrierung zwar nicht erforderlich (oder sogar ersuchen) E-Mails für weitere Teilnehmer (dh ihre \"Gäste\" ) erfordern. "
+msgstr "Sie können unterschiedliche Profile für die anmeldende Person und die weiteren Teilnehmenden verwenden. So können Sie etwa von der Person, die die Anmeldungen eingibt, eine E-Mail-Adresse verlangen, von den weiteren Teilnehmenden dagegen nicht."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Allow Shared Email"
