--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-28 15:57+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-08-02 15:07+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -12804,7 +12804,7 @@ msgstr "No s'ha pogut trobar el camp personalitzat per a %1, %2, %3"
 
 #: CRM/Utils/OpenFlashChart.php
 msgid "Bar Chart"
-msgstr "Gràfics de barres"
+msgstr "Gràfic de barres"
 
 #: CRM/Utils/OpenFlashChart.php
 msgid "Pie Chart"
