--- a/po/ko_KR/admin.po
+++ b/po/ko_KR/admin.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-04 05:46+0000\n"
+"PO-Revision-Date: 2016-08-03 04:54+0000\n"
 "Last-Translator: Young Jun Kim <young.j.kim0214@gmail.com>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/civicrm/civicrm/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
@@ -236,7 +236,7 @@ msgstr "vCard 이름"
 
 #: CRM/Admin/Form/LocationType.php
 msgid "Selected Location type has been deleted."
-msgstr ""
+msgstr "선택한 로케이션 유형이 삭제되었습니다."
 
 #: CRM/Admin/Form/LocationType.php
 msgid "The location type '%1' has been saved."
