--- a/po/es_MX/admin.po
+++ b/po/es_MX/admin.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Arturo Cerecero <arturocerecero@gmail.com>, 2016
 # Brenda Hernández-E <angelmalvada@gmail.com>, 2015
 # IndiraCornelio <indira.cornelio@gmail.com>, 2011
 # Joaquin Cardiel <orfeon@hotmail.com>, 2013
@@ -17,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-25 22:24+0000\n"
-"Last-Translator: Pablo May <pablojesusmay@gmail.com>\n"
+"PO-Revision-Date: 2016-08-03 21:53+0000\n"
+"Last-Translator: Arturo Cerecero <arturocerecero@gmail.com>\n"
 "Language-Team: Spanish (Mexico) (http://www.transifex.com/civicrm/civicrm/language/es_MX/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -265,7 +266,7 @@ msgstr "El nombre de dominio tiene que usar un formato de dominio válido (e.j: 
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Localpart"
-msgstr ""
+msgstr "ParteLocal"
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Return-Path"
@@ -314,7 +315,7 @@ msgstr "Cambios no guardados."
 
 #: CRM/Admin/Form/Mapping.php
 msgid "Field Mapping"
-msgstr ""
+msgstr "Mapeo de campo"
 
 #: CRM/Admin/Form/MessageTemplates.php
 #: templates/CRM/Admin/Page/MessageTemplates.hlp
@@ -374,7 +375,7 @@ msgstr "La opción seleccionada %1 ha sido <strong> eliminada<\\strong> porque e
 
 #: CRM/Admin/Form/Options.php
 msgid "%1 Option"
-msgstr ""
+msgstr "Opción 1%"
 
 #: CRM/Admin/Form/Options.php
 msgid ""
@@ -396,7 +397,7 @@ msgstr "Nombre de la Categoría"
 
 #: CRM/Admin/Form/Options.php
 msgid "Contacts AND Cases"
-msgstr ""
+msgstr "Contactos Y Casos"
 
 #: CRM/Admin/Form/Options.php
 msgid "Cases Only"
