--- a/po/it_IT/mailing.po
+++ b/po/it_IT/mailing.po
@@ -6,12 +6,13 @@
 # Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # LinoLinux <reni.marco@gmail.com>, 2014
+# Salvatore Emanuele Schimmenti <salvatore.schimmenti@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-02 23:41+0000\n"
-"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
+"PO-Revision-Date: 2016-08-04 01:11+0000\n"
+"Last-Translator: Salvatore Emanuele Schimmenti <salvatore.schimmenti@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,7 +26,7 @@ msgstr "CiviMail non invierà un'email ad un contatto non esistente: %1"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "CiviMail will not send an empty mail body, Skipping: %1"
-msgstr ""
+msgstr "Contatto email inesistente, impossibile inviare il messaggio: %1"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"%1\" is required."
