po: update po/it_IT/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/campaign.po
+++ b/po/it_IT/campaign.po
@@ -8,12 +8,13 @@
 # Marcello <marcello.gribaudo@opigi.com>, 2015
 # LinoLinux <reni.marco@gmail.com>, 2014
 # Riccardo <ricma40@gmail.com>, 2013
+# Salvatore Emanuele Schimmenti <salvatore.schimmenti@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-03 20:29+0000\n"
+"Last-Translator: Salvatore Emanuele Schimmenti <salvatore.schimmenti@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,7 +32,7 @@ msgstr "Campagne passate"
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "No survey sid parameter. Cannot process signature."
-msgstr ""
+msgstr "Mancanza identificativo -SID- del sondaggio. Impossibile elaborare la firma."
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "Petition Id and/or Activity Id is not of the type Positive."
