po: update po/ta/extension.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ta/extension.po
+++ b/po/ta/extension.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Ilagnayeru (MIG) Manickam <mig.tamil@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-05 14:21+0000\n"
+"Last-Translator: Ilagnayeru (MIG) Manickam <mig.tamil@gmail.com>\n"
 "Language-Team: Tamil (http://www.transifex.com/civicrm/civicrm/language/ta/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,7 +19,7 @@ msgstr ""
 
 #: CRM/Extension/Browser.php CRM/Extension/Downloader.php
 msgid "Directory Unwritable"
-msgstr ""
+msgstr "கோப்பகம் எழுத இயலாதது"
 
 #: CRM/Extension/Browser.php
 msgid ""
