--- a/po/ta/countries.po
+++ b/po/ta/countries.po
@@ -3,14 +3,15 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Ilagnayeru (MIG) Manickam <mig.tamil@gmail.com>, 2016
 # rajeshs <rajesh@millertech.co.uk>, 2013
 # rajeshs <rajesh@millertech.co.uk>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-08 22:32+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-05 14:04+0000\n"
+"Last-Translator: Ilagnayeru (MIG) Manickam <mig.tamil@gmail.com>\n"
 "Language-Team: Tamil (http://www.transifex.com/civicrm/civicrm/language/ta/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1040,8 +1041,8 @@ msgstr "கொசோவோ"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "செயிண்ட் பார்த்தலெமி"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "செயிண்ட் மார்டின் (பிரெஞ்சு பகுதி)"
