--- a/po/ta/provinces.po
+++ b/po/ta/provinces.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Ilagnayeru (MIG) Manickam <mig.tamil@gmail.com>, 2016
 # rajeshs <rajesh@millertech.co.uk>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-05 14:10+0000\n"
+"Last-Translator: Ilagnayeru (MIG) Manickam <mig.tamil@gmail.com>\n"
 "Language-Team: Tamil (http://www.transifex.com/civicrm/civicrm/language/ta/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -591,7 +592,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Kabul"
-msgstr ""
+msgstr "காபூல்"
 
 msgctxt "province"
 msgid "Kandahar"
