--- a/po/pt_BR/financial.po
+++ b/po/pt_BR/financial.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Cristiane Lima <tiane.ash@uol.com.br>, 2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013-2014
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2013
@@ -12,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-06 16:57+0000\n"
+"Last-Translator: Cristiane Lima <tiane.ash@uol.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,23 +24,23 @@ msgstr ""
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Record:"
-msgstr ""
+msgstr "Registro:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created By:"
-msgstr ""
+msgstr "Criado por:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created Date:"
-msgstr ""
+msgstr "Data de Criação:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Last Modified By:"
-msgstr ""
+msgstr "Última Modificação por:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Instrument:"
-msgstr ""
+msgstr "Forma de pagamento:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Batch"
@@ -61,7 +62,7 @@ msgstr "Este contato (ou contatos) não pode ser excluído permanentemente pois 
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "The following tables have an entry for this financial type: %1"
-msgstr ""
+msgstr "As tabelas seguintes têm uma entrada para este tipo fnanceiro: %\n1"
 
 #: CRM/Financial/BAO/FinancialTypeAccount.php
 msgid ""
@@ -85,45 +86,45 @@ msgstr "Transações não balanceadas podem ser criadas se você excluir a conta
 
 #: CRM/Financial/BAO/PaymentProcessor.php
 msgid "Invalid value passed to getPayment function"
-msgstr ""
+msgstr "Valor inválido passado para a função getPayment"
 
 #: CRM/Financial/BAO/PaymentProcessor.php
 msgid "Could not retrieve payment processor details"
-msgstr ""
+msgstr "Não foi possível recuperar detalhes do processador de pagamento"
 
 #: CRM/Financial/BAO/PaymentProcessorType.php
 msgid ""
 "There is a Payment Processor associated with selected Payment Processor "
 "type, hence it can not be deleted."
-msgstr ""
+msgstr "Existe um Processador de Pagamento associado com o tipo do Processador de Pagamento selecionado."
 
 #: CRM/Financial/BAO/PaymentProcessorType.php
 msgid "Selected Payment Processor type has been deleted.<br/>"
-msgstr ""
+msgstr "O tipo do Processador de Pagamento selecionado foi excluído."
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Symbol"
-msgstr ""
+msgstr "Símbolo"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Numeric Code"
-msgstr ""
+msgstr "Código Numérico"
 
 #: CRM/Financial/DAO/EntityFinancialTrxn.php
 msgid "Entity Financial Transaction ID"
-msgstr ""
+msgstr "ID de Transação da Entidade Financeira"
 
 #: CRM/Financial/DAO/EntityFinancialTrxn.php
 msgid "Financial Transaction Id"
-msgstr ""
+msgstr "ID da Transação Financeira"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account ID"
-msgstr ""
+msgstr "ID da Conta Financeira"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Name"
-msgstr ""
+msgstr "Nome da Conta Financeira"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 #: CRM/Financial/Form/FinancialAccount.php
@@ -134,133 +135,133 @@ msgstr "Código Contábil"
 #: CRM/Financial/DAO/FinancialAccount.php
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Account Type Code"
-msgstr "Código de Tipo de Conta"
+msgstr "Código do Tipo de Conta"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Description"
-msgstr ""
+msgstr "Descrição da Conta Financeira"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Parent"
-msgstr ""
+msgstr "Conta Financeira Matriz"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Header Financial Account?"
-msgstr ""
+msgstr "Nome da Conta Financeira?"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Deductible Financial Account?"
-msgstr ""
+msgstr "Conta Financeira Dedutível?"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Tax Financial Account?"
-msgstr ""
+msgstr "Conta Financeira Tributável?"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Tax Rate"
-msgstr ""
+msgstr "Índice do imposto da Conta Financeira"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Reserved Financial Account?"
-msgstr ""
+msgstr "Conta Financeira Desativada?"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account is Active"
-msgstr ""
+msgstr "Conta Financeira está ativa"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Default Financial Account"
-msgstr ""
+msgstr "Conta Financeira Padrão"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction ID"
-msgstr ""
+msgstr "ID da Transação Financeira"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction From Account"
-msgstr ""
+msgstr "Transação Financeira da Conta (Débito)"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction To Account"
-msgstr ""
+msgstr "Transação Financeira para Conta Financeira (Crédito)"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction Date"
-msgstr ""
+msgstr "Data da Transação Financeira"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Total Amount"
-msgstr ""
+msgstr "Valor Total Financeiro"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Fee Amount"
-msgstr ""
+msgstr "Valor financeiro da taxa "
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Net Amount"
-msgstr ""
+msgstr "Valor Financeiro Líquido"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Currency"
-msgstr ""
+msgstr "Moeda Financeira"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Transaction Result Code"
-msgstr ""
+msgstr "Código do Resultado da Transação"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction Status Id"
-msgstr ""
+msgstr "Id de Situação da Transação Financeira"
 
 #: CRM/Financial/DAO/FinancialType.php
 msgid "Is Tax Deductible?"
-msgstr ""
+msgstr "É Dedutível de Impostos"
 
 #: CRM/Financial/DAO/FinancialType.php
 msgid "Financial Type is Reserved?"
-msgstr ""
+msgstr "Tipo Financeiro está desativado?"
 
 #: CRM/Financial/DAO/FinancialType.php
 msgid "Financial Type Is Active?"
-msgstr ""
+msgstr "Tipo Financeiro está ativo"
 
 #: CRM/Financial/DAO/PaymentProcessor.php CRM/Financial/DAO/PaymentToken.php
 msgid "Payment Processor ID"
-msgstr ""
+msgstr "ID do Processador de Pagamento"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Payment Processor Domain"
-msgstr ""
+msgstr "Domínio do Processador de Pagamento"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Processor Description"
-msgstr ""
+msgstr "Descrição do Processador"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Payment Processor Type ID"
-msgstr ""
+msgstr "ID do tipo do processador de pagamento"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Processor is Active?"
-msgstr ""
+msgstr "O Processador está ativo?"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Processor Is Default?"
-msgstr ""
+msgstr "O Processador é Padrão?"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Is Test Processor?"
-msgstr ""
+msgstr "É um Processador para Teste?"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Suffix for PHP clas name implementation"
-msgstr ""
+msgstr "Sufixo para implementação do nome da classe PHP"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Processor Billing Mode"
-msgstr ""
+msgstr "Forma de Faturamento do Processador"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Processor Supports Recurring?"
@@ -268,23 +269,23 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Payment Processor variable name to be used in code"
-msgstr ""
+msgstr "Nome da variável do Processador de Pagamento para ser usada no código"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Payment Processor Title"
-msgstr ""
+msgstr "Título do Processador de Pagamento"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type Description"
-msgstr ""
+msgstr "Descrição doTipo de Processador"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type Is Active?"
-msgstr ""
+msgstr "Tipo do Processador está ativo?"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type is Default?"
-msgstr ""
+msgstr "Tipo do Processador é Padrão?"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for User Name if used"
@@ -1006,7 +1007,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Status ID"
-msgstr ""
+msgstr "ID do Status da Transação Financeira"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Is Payment?"
