--- a/po/pt_BR/member.po
+++ b/po/pt_BR/member.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Cristiane Lima <tiane.ash@uol.com.br>, 2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2014
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013-2014
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2012
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-06 17:08+0000\n"
+"Last-Translator: Cristiane Lima <tiane.ash@uol.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2285,7 +2286,7 @@ msgstr "%1 Filiação"
 
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 msgid "NO"
-msgstr ""
+msgstr "NÂO"
 
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid ""
