--- a/po/es_MX/admin.po
+++ b/po/es_MX/admin.po
@@ -9,6 +9,7 @@
 # Joaquin Cardiel <orfeon@hotmail.com>, 2013
 # ixiam_jose <jrombini@hotmail.com>, 2012
 # juan barajas <juanito_feliz0123@hotmail.com>, 2016
+# Leonardo Esteban Briseño Ríos <leobri28@gmail.com>, 2016
 # Leonardo Ordonez Checa <leoxordonez@gmail.com>, 2011
 # Joaquin Cardiel <orfeon@hotmail.com>, 2013
 # Pablo May <pablojesusmay@gmail.com>, 2016
@@ -18,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-03 21:53+0000\n"
-"Last-Translator: Arturo Cerecero <arturocerecero@gmail.com>\n"
+"PO-Revision-Date: 2016-08-09 04:28+0000\n"
+"Last-Translator: Leonardo Esteban Briseño Ríos <leobri28@gmail.com>\n"
 "Language-Team: Spanish (Mexico) (http://www.transifex.com/civicrm/civicrm/language/es_MX/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -675,19 +676,19 @@ msgstr "Nombre de la Factura"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enter prefix to be display on PDF for invoice"
-msgstr ""
+msgstr "Introduzca el prefijo para ser desplegado en el PDF para la factura"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Credit Notes Prefix"
-msgstr ""
+msgstr "Abreviación de las Notas de Crédito"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enter prefix to be display on PDF for credit notes."
-msgstr ""
+msgstr "Introduzca la abreviación para ser desplegado en el PDF para  notas de crédito"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "For transmission"
-msgstr ""
+msgstr "para transmisión"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Select the interval for due date."
@@ -695,7 +696,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Notes or Standard Terms"
-msgstr ""
+msgstr "Notas o condiciones estándar"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enter note or message to be displayed on PDF invoice or credit notes "
@@ -707,11 +708,11 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Tax Term"
-msgstr ""
+msgstr "Términos de impuestos"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Tax Display Settings"
-msgstr ""
+msgstr "Configuración de pantalla de Impuestos"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enable Tax and Invoicing"
@@ -795,7 +796,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "show all"
-msgstr ""
+msgstr "mostrar todos"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "CiviMail Component Settings"
@@ -1022,7 +1023,7 @@ msgstr ""
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Repetition Condition"
-msgstr ""
+msgstr "Condición de repetición"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "From Email"
@@ -1046,7 +1047,7 @@ msgstr "Limitar Opciones"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Recipient Roles"
-msgstr ""
+msgstr "Destinatarios"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Manual Recipients"
