--- a/po/de_DE/member.po
+++ b/po/de_DE/member.po
@@ -5,6 +5,7 @@
 # Translators:
 # translatosaurus <accounts@drexler.eu>, 2013
 # translatosaurus <accounts@drexler.eu>, 2012
+# Andreas Müller <mueller@democracy-international.org>, 2016
 # Benny Doe <s71664@htw-dresden.de>, 2016
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011-2012,2014
@@ -24,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-30 07:31+0000\n"
-"Last-Translator: Finn F <ffmoto95@gmail.com>\n"
+"PO-Revision-Date: 2016-08-08 13:59+0000\n"
+"Last-Translator: Andreas Müller <mueller@democracy-international.org>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -56,7 +57,7 @@ msgstr "Bitte wählen Sie eine der Mitgliedschaften"
 
 #: CRM/Member/BAO/Membership.php
 msgid "Please renew my membership automatically."
-msgstr "Bitte verlängern Sie meine Mitglieschaft automatisch."
+msgstr "Bitte verlängern Sie meine Mitgliedschaft automatisch."
 
 #: CRM/Member/BAO/Membership.php
 msgid "do not import"
