--- a/po/es_ES/admin.po
+++ b/po/es_ES/admin.po
@@ -5,6 +5,7 @@
 # Translators:
 # Alexandre Hurlé <j.alexandre@entreculturas.org>, 2016
 # Alvaro Illanes <aillanes@tvsantelmo.com.ar>, 2013
+# Ana Poveda <anaemiliapp@hotmail.com>, 2016
 # Carlos Capote <carloscapote@masticable.org>, 2014
 # Cristian Schalper <crschalper@gmail.com>, 2015
 # David Cereceto Martínez <dcereceto@gmail.com>, 2015
@@ -30,8 +31,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-25 15:51+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-08-09 04:49+0000\n"
+"Last-Translator: Ana Poveda <anaemiliapp@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2005,7 +2006,7 @@ msgstr "¿Está seguro que desea eliminar este mapeo?"
 
 #: CRM/Admin/Page/Mapping.php
 msgid "This operation cannot be undone."
-msgstr ""
+msgstr "Esta operación no puede ser deshecha."
 
 #: CRM/Admin/Page/Mapping.php
 msgid "Edit Mapping"
@@ -2206,11 +2207,11 @@ msgstr ""
 
 #: ang/crmCxn/AdvTable.html
 msgid "Property"
-msgstr ""
+msgstr "Propiedad"
 
 #: ang/crmCxn/ConfirmConnectCtrl.html
 msgid "The application, \\\"%1\\\", requests permission to access your system."
-msgstr ""
+msgstr "La aplicación, /\"%1/\", solicita permiso para acceder a su sistema."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Are you sure you want to reconnect \\\"%1\\\"?"
