po: update po/sv_SE/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/event.po
+++ b/po/sv_SE/event.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-10 13:54+0000\n"
+"PO-Revision-Date: 2016-08-08 08:30+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -1776,12 +1776,12 @@ msgstr "Skicka bekräftelse"
 
 #: templates/CRM/Event/Form/EventFees.tpl
 msgid "Automatically email a confirmation and receipt to %1?"
-msgstr "Automatiskt e-posta bekräftelse och kvitto till %1?"
+msgstr "Skicka automatiskt bekräftelse och kvitto till %1 med e-post?"
 
 #: templates/CRM/Event/Form/EventFees.tpl
 #: templates/CRM/Event/Form/ParticipantFeeSelection.tpl
 msgid "Automatically email a confirmation to %1?"
-msgstr "Automatiskt e-posta en bekräftelse till %1?"
+msgstr "Skicka automatiskt en bekräftelse till %1 med e-post?"
 
 #: templates/CRM/Event/Form/EventFees.tpl
 msgid ""
