--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-02 15:07+0000\n"
+"PO-Revision-Date: 2016-08-10 22:26+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -8459,7 +8459,7 @@ msgstr "Netejats tots els caches de CiviCRM (base de dades, menú, plantilles)"
 #: CRM/Core/Invoke.php CRM/Core/Page/File.php CRM/Core/SelectValues.php
 #: CRM/Utils/System.php
 msgid "Complete"
-msgstr "Complert"
+msgstr "Completat"
 
 #: CRM/Core/Invoke.php
 msgid "Bad menu record in database"
