--- a/po/cs_CZ/menu.po
+++ b/po/cs_CZ/menu.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # iv0 <ivo.zlabek@gmail.com>, 2011
+# jakub carva <jakub.carva@seznam.cz>, 2016
 # Larry Neuwirth <info@emarketo.eu>, 2014
 # Luděk Kolisko <lkolisko@volny.cz>, 2012
 # Marek Boček <marek.bocek@iqrs.cz>, 2014
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-10 20:36+0000\n"
+"Last-Translator: jakub carva <jakub.carva@seznam.cz>\n"
 "Language-Team: Czech (http://www.transifex.com/civicrm/civicrm/language/cs/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -154,7 +155,7 @@ msgstr "Přiřadit jinému klientovi"
 
 msgctxt "menu"
 msgid "File on Case"
-msgstr ""
+msgstr "Soubor na případu"
 
 msgctxt "menu"
 msgid "Case Details"
@@ -888,7 +889,7 @@ msgstr "CiviCRM Blog"
 
 msgctxt "menu"
 msgid "CiviCRM Getting Started"
-msgstr ""
+msgstr "Začínáme s CiviCRM"
 
 msgctxt "menu"
 msgid "Case Dashlet"
@@ -1343,7 +1344,7 @@ msgstr "Novinky CiviCRM"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Getting Started"
-msgstr ""
+msgstr "Začínáme"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1618,7 +1619,7 @@ msgstr "Systémová nastavení"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Connections"
-msgstr ""
+msgstr "Připojení"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1703,12 +1704,12 @@ msgstr "Všechny reporty"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Support"
-msgstr ""
+msgstr "Podpora"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get started"
-msgstr ""
+msgstr "Začít"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1718,7 +1719,7 @@ msgstr "Dokumentace"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Ask a question"
-msgstr ""
+msgstr "Položit otázku"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2157,7 +2158,7 @@ msgstr "Podrobný report získávání zákazníků, telefonního bankovnictví,
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Payment Methods"
-msgstr ""
+msgstr "Metody platby"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
