po: update po/de_DE/pcp.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/pcp.po
+++ b/po/de_DE/pcp.po
@@ -7,6 +7,7 @@
 # Detlev Sieber <detlev.sieber@foebud.org>, 2012,2014
 # pantteri, 2013
 # Fabian <schuttenberg@systopia.de>, 2015-2016
+# Frederik Bugglin <frederik.bugglin@gmail.com>, 2016
 # Michal Seidler, 2012
 # Jo <jo@caj-augsburg.de>, 2012
 # Martin Peth <peth@systopia.de>, 2014-2016
@@ -18,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:06+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-11 14:05+0000\n"
+"Last-Translator: Frederik Bugglin <frederik.bugglin@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -597,7 +598,7 @@ msgstr "Kontakten erlauben, persönliche Fundraising-Seiten für diese Veranstal
 msgid ""
 "You can also place additional links (or menu items) allowing constituents to"
 " create their own fundraising pages using the following URL:"
-msgstr ""
+msgstr "Sie können auch weitere Links (oder Menüpunkte) setzen, die es den Unterstützerinnen und Unterstützern ermöglichen, Ihre eigenen Fundraising-Seiten zu erstellen, indem sie die folgende URL verwenden:"
 
 #: templates/CRM/PCP/Form/PCP.tpl templates/CRM/PCP/Page/PCP.hlp
 msgid ""
