--- a/po/de_DE/mailing.po
+++ b/po/de_DE/mailing.po
@@ -11,6 +11,7 @@
 # Fabian <schuttenberg@systopia.de>, 2013-2015
 # Finn F <ffmoto95@gmail.com>, 2016
 # Freddy Koschinsky <schollator@burning.name>, 2013
+# Frederik Bugglin <frederik.bugglin@gmail.com>, 2016
 # Michal Seidler, 2011, 2012
 # Jo <jo@caj-augsburg.de>, 2012
 # Martin Peth <peth@systopia.de>, 2014-2015
@@ -28,8 +29,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-02 08:26+0000\n"
-"Last-Translator: Finn F <ffmoto95@gmail.com>\n"
+"PO-Revision-Date: 2016-08-11 14:02+0000\n"
+"Last-Translator: Frederik Bugglin <frederik.bugglin@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1182,7 +1183,7 @@ msgstr "Speichern unter"
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Email address"
-msgstr ""
+msgstr "E-Mail Adresse"
 
 #: ang/crmMailing/BlockMailing.html
 msgid "Unsubscribe Group"
