po: update po/de_DE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -13,6 +13,7 @@
 # pantteri, 2013
 # Ettore Atalan <atalanttore@googlemail.com>, 2015
 # Fabian <schuttenberg@systopia.de>, 2013-2016
+# Frederik Bugglin <frederik.bugglin@gmail.com>, 2016
 # gnpma100 <gnpma100@gmail.com>, 2014
 # gnpma100 <gnpma100@gmail.com>, 2014
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
@@ -48,8 +49,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-14 07:47+0000\n"
-"Last-Translator: Thomas Schuettler\n"
+"PO-Revision-Date: 2016-08-11 14:36+0000\n"
+"Last-Translator: Frederik Bugglin <frederik.bugglin@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6622,7 +6623,7 @@ msgstr "Primäre Adresse?"
 
 #: CRM/Core/DAO/Address.php
 msgid "Is Billing Address"
-msgstr ""
+msgstr "Ist Rechnungsadresse"
 
 #: CRM/Core/DAO/Address.php
 msgid "Street Number Suffix"
@@ -9020,7 +9021,7 @@ msgstr "Kontakte importieren"
 
 #: CRM/Core/Permission.php
 msgid "Import contacts and activities"
-msgstr ""
+msgstr "Kontakte und Aktivitäten importieren"
 
 #: CRM/Core/Permission.php
 msgid "edit groups"
@@ -9301,7 +9302,7 @@ msgstr ""
 
 #: CRM/Core/Permission.php
 msgid "Edit API keys"
-msgstr ""
+msgstr "API-Schlüssel bearbeiten"
 
 #: CRM/Core/Permission.php
 msgid "edit own api keys"
@@ -12637,7 +12638,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Env.php
 msgid "Outbound Email Settings"
-msgstr ""
+msgstr "Einstellungen für ausgehende E-Mails"
 
 #: CRM/Utils/Check/Security.php
 msgid "Security Warning"
@@ -22409,7 +22410,7 @@ msgstr "Einnahmen"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Cost of Sales"
-msgstr ""
+msgstr "Materialaufwand"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Expenses"
@@ -25302,7 +25303,7 @@ msgstr ""
 
 #: CRM/Core/DAO/Menu.php
 msgid "Public?"
-msgstr ""
+msgstr "Öffentlich?"
 
 #: CRM/Core/DAO/Menu.php
 msgid "Exposed?"
@@ -25310,7 +25311,7 @@ msgstr ""
 
 #: CRM/Core/DAO/Menu.php
 msgid "Use SSL?"
-msgstr ""
+msgstr "SSL benutzen?"
 
 #: CRM/Core/DAO/Menu.php
 msgid "Hide Breadcrumb?"
@@ -25613,27 +25614,27 @@ msgstr ""
 
 #: CRM/Core/SelectValues.php
 msgid "Years"
-msgstr ""
+msgstr "Jahre"
 
 #: CRM/Core/SelectValues.php
 msgid "Fiscal Years"
-msgstr ""
+msgstr "Geschäftsjahre"
 
 #: CRM/Core/SelectValues.php
 msgid "Quarters"
-msgstr ""
+msgstr "Quartale"
 
 #: CRM/Core/SelectValues.php
 msgid "Months"
-msgstr ""
+msgstr "Monate"
 
 #: CRM/Core/SelectValues.php
 msgid "Weeks"
-msgstr ""
+msgstr "Wochen"
 
 #: CRM/Core/SelectValues.php
 msgid "Days"
-msgstr ""
+msgstr "Tage"
 
 #: CRM/Dedupe/DAO/Exception.php
 msgid "Dedupe Exception ID"
@@ -26059,23 +26060,23 @@ msgstr ""
 
 #: CRM/Utils/Check.php
 msgid "System Status: Critical"
-msgstr ""
+msgstr "System Status: Kritisch"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Error"
-msgstr ""
+msgstr "System Status: Fehler"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Warning"
-msgstr ""
+msgstr "System Status: Warnung"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Notice"
-msgstr ""
+msgstr "System Status: Hinweis"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Ok"
-msgstr ""
+msgstr "System Status: OK"
 
 #: CRM/Utils/Rule.php
 msgid ""
@@ -26101,7 +26102,7 @@ msgstr ""
 
 #: ang/crmUi.js
 msgid "Hello"
-msgstr ""
+msgstr "Hallo"
 
 #: js/crm.insert-shortcode.js
 msgid "Insert"
@@ -26142,7 +26143,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "overwrite"
-msgstr ""
+msgstr "überschreiben"
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "match"
@@ -26196,7 +26197,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Street Address 1"
-msgstr ""
+msgstr "Straße"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Street Address 2"
@@ -26224,7 +26225,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Postcode"
-msgstr ""
+msgstr "Postleitzahl"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Force Merge Selected Duplicates"
@@ -26369,7 +26370,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Payment Methods"
-msgstr ""
+msgstr "Zahlungsmethoden"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Relative Date Filters"
@@ -26445,7 +26446,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "This week"
-msgstr ""
+msgstr "aktuelle Woche"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This calendar month"
@@ -26453,15 +26454,15 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "This quarter"
-msgstr ""
+msgstr "aktuelles Quartal"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This fiscal year"
-msgstr ""
+msgstr "aktuelles Geschäftsjahr"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This calendar year"
-msgstr ""
+msgstr "aktuelles Kalenderjahr"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous week"
