--- a/po/de_DE/financial.po
+++ b/po/de_DE/financial.po
@@ -7,6 +7,7 @@
 # Ettore Atalan <atalanttore@googlemail.com>, 2014-2015
 # Fabian <schuttenberg@systopia.de>, 2013-2016
 # Freddy Koschinsky <schollator@burning.name>, 2013
+# Frederik Bugglin <frederik.bugglin@gmail.com>, 2016
 # Hanno <h.paul@praxis-habighorst.de>, 2013
 # Martin Peth <peth@systopia.de>, 2014-2016
 # heliogabal <rhalbmann@gmail.com>, 2014
@@ -17,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-11 14:03+0000\n"
+"Last-Translator: Frederik Bugglin <frederik.bugglin@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,15 +29,15 @@ msgstr ""
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Record:"
-msgstr ""
+msgstr "Datensatz:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created By:"
-msgstr ""
+msgstr "Erstellt von:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created Date:"
-msgstr ""
+msgstr "Erstelldatum"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Last Modified By:"
