--- a/po/de_DE/event.po
+++ b/po/de_DE/event.po
@@ -11,6 +11,7 @@
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2013
 # Bernhard Heß <dr.bernhard.hess@t-online.de>, 2012
 # Fabian <schuttenberg@systopia.de>, 2013-2016
+# Frederik Bugglin <frederik.bugglin@gmail.com>, 2016
 # gnpma100 <gnpma100@gmail.com>, 2014
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2012
@@ -30,8 +31,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-02 13:47+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
+"PO-Revision-Date: 2016-08-11 14:02+0000\n"
+"Last-Translator: Frederik Bugglin <frederik.bugglin@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3739,7 +3740,7 @@ msgstr ""
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "Enter valid email address."
-msgstr ""
+msgstr "Bitte geben Sie eine gültige E-Mail-Adresse ein."
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid " is already registered for this event"
