po: update po/el_GR/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/el_GR/install.po
+++ b/po/el_GR/install.po
@@ -3,14 +3,15 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Ioannis Ampatzis <ampatzis.ioannis@gmail.com>, 2016
 # kvisitor <kvisitor@gnugr.org>, 2014
 # Vangelis P. <v.pantazis@ixiam.com>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 16:48+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-13 11:59+0000\n"
+"Last-Translator: Ioannis Ampatzis <ampatzis.ioannis@gmail.com>\n"
 "Language-Team: Greek (http://www.transifex.com/civicrm/civicrm/language/el/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,7 +39,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Installation Guide"
-msgstr ""
+msgstr "Οδηγός Εγκατάστασης"
 
 #: install/index.php
 msgid ""
@@ -51,7 +52,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! Incorrect CiviCRM version"
-msgstr ""
+msgstr "Λάθος έκδοση CiviCRM"
 
 #: install/index.php
 msgid "This installer can only be used for the Drupal version of CiviCRM."
@@ -59,7 +60,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! Incorrect Drupal version"
-msgstr ""
+msgstr "Λάθος έκδοση Drupal"
 
 #: install/index.php
 msgid ""
@@ -93,7 +94,7 @@ msgstr "Υπάρχει αυτός ο διακομιστής;"
 
 #: install/index.php
 msgid "Can't find the a MySQL server on '%1'."
-msgstr ""
+msgstr "Δεν μπορεί να βρεθεί ο διακομιστής MySQL στο '%1'."
 
 #: install/index.php
 msgid "Are the access credentials correct?"
@@ -141,7 +142,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Can I access/create the database?"
-msgstr ""
+msgstr "Μπορώ να έχω πρόσβαση/δημιουργήσω τη βάση δεδομένων;"
 
 #: install/index.php
 msgid "I can't create new databases and the database '%1' doesn't exist."
@@ -149,7 +150,7 @@ msgstr "Δε μπορώ να δημιουργήσω νέες βάσεις δεδ
 
 #: install/index.php
 msgid "Can I access/create InnoDB tables in the database?"
-msgstr ""
+msgstr "Μπορώ να έχω πρόσβαση/δημιουργήσω πίνακες InnoDB στη βάση δεδομένων;"
 
 #: install/index.php
 msgid ""
@@ -220,7 +221,7 @@ msgstr "Υπάρχει ο φάκελος '%1' ;"
 
 #: install/index.php
 msgid "There is no '%1' folder."
-msgstr ""
+msgstr "Δεν υπάρχει ο φάκελος '% 1'."
 
 #: install/index.php
 msgid "Is the %1 folder writeable?"
@@ -232,11 +233,11 @@ msgstr "Δεν μπορώ να πω τι webserver τρέχετε"
 
 #: install/index.php
 msgid "Webserver config"
-msgstr ""
+msgstr "Ρύθμιση διακομιστή"
 
 #: install/index.php
 msgid "Recognised webserver"
-msgstr ""
+msgstr "Αναγνωρισμένος διακομιστής"
 
 #: install/index.php
 msgid ""
@@ -254,7 +255,7 @@ msgstr "Η υποστήριξη JSON δε περιλαμβάνεται στη PH
 
 #: install/index.php
 msgid "XCache compatibility"
-msgstr ""
+msgstr "Συμβατότητα XCache"
 
 #: install/index.php
 msgid ""
@@ -274,7 +275,7 @@ msgstr ""
 
 #: install/index.php
 msgid "You only have %1 allocated"
-msgstr ""
+msgstr "Έχετε διαθέσει μόνο %1"
 
 #: install/index.php
 msgid ""
@@ -426,7 +427,7 @@ msgstr "Το CiviCRM Εγκαταστάθηκε"
 
 #: install/index.php
 msgid "CiviCRM has been successfully installed"
-msgstr ""
+msgstr "Το CiviCRM εγκαταστάθηκε επιτυχώς"
 
 #: install/index.php
 msgid ""
