po: update po/pt_BR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/admin.po
+++ b/po/pt_BR/admin.po
@@ -13,6 +13,7 @@
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2011,2013
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2013
 # Finks Costa <finkseletronica28@gmail.com>, 2015-2016
+# Gabriel Almeida <gabrieel@email.com>, 2016
 # Gilvanilson Santos <grupogvsantos@gmail.com>, 2016
 # Gustavo Rodrigues da Silva <gustavo.arjuna@gmail.com>, 2015
 # João Fagner Fonseca de Oliveira <fagworio@gmail.com>, 2016
@@ -28,8 +29,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-26 15:16+0000\n"
-"Last-Translator: Cristiane Lima <tiane.ash@uol.com.br>\n"
+"PO-Revision-Date: 2016-08-14 18:16+0000\n"
+"Last-Translator: Gabriel Almeida <gabrieel@email.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2340,63 +2341,63 @@ msgstr "É necessário Acesso à Internet"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Connecting..."
-msgstr ""
+msgstr "Conectando..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Connected"
-msgstr ""
+msgstr "Conectado"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Reconnecting..."
-msgstr ""
+msgstr "Reconectando..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Reconnected"
-msgstr ""
+msgstr "Reconectado"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Disconnecting..."
-msgstr ""
+msgstr "Desconectando..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Disconnected"
-msgstr ""
+msgstr "Desconectado"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid ""
 "The page \"%1\" will open in a popup. If it does not appear automatically, "
 "check your browser for notifications."
-msgstr ""
+msgstr "A página \"%1\" será aberto em um pop-up. Se ele não aparecer automaticamente, verifique o seu navegador para notificações."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Cannot open link. Unrecognized mode."
-msgstr ""
+msgstr "Não é possível abrir link. Modo não reconhecido."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Opening..."
-msgstr ""
+msgstr "Abrindo..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "External Link"
-msgstr ""
+msgstr "Link externo"
 
 #: ang/crmCxn/PermTable.html
 msgid "Action(s)"
-msgstr ""
+msgstr "Ações"
 
 #: ang/crmCxn/PermTable.html
 msgid "Filter(s)"
-msgstr ""
+msgstr "Filtros"
 
 #: ang/crmCxn/PermTable.html
 msgid "Field(s)"
-msgstr ""
+msgstr "Campo(s)"
 
 #: ang/crmCxn/PermTable.html
 msgid ""
 "For in-depth details about entities and actions, see the <a href='%1' "
 "target='%2'>API Explorer</a>."
-msgstr ""
+msgstr "Para mais detalhes sobre as entidades e ações, consulte a <a href='%1' target='%2'>API Explorador</a>."
 
 #: templates/CRM/Admin/Form/CMSUser.tpl
 msgid "Synchronize %1 Users"
@@ -3116,7 +3117,7 @@ msgid ""
 "from the dashboard. Please first enable CiviCRM invoicing functionality <a "
 "href='%1'>Administer > CiviContribute > CiviContribute Component "
 "Settings</a>"
-msgstr ""
+msgstr "A fim de permitir que usuários conectados baixem faturas e notas de crédito do painel. Por favor, primeiro habilitar CiviCRM funcionalidade facturação <a href='%1'>Administrar > CiviContribute > Configurações de Componentes CiviContribute</a>"
 
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
 msgid ""
@@ -3133,7 +3134,7 @@ msgid ""
 "Controls display of the smart groups that a contact is part of in each "
 "contact's \"Groups\" tab. \"Show on Demand\" provides the best performance, "
 "and is recommended for most sites."
-msgstr ""
+msgstr "Controles de exibição dos grupos inteligentes que um contato é parte em guias \"Grupos\". Cada contato \"Mostrar sob demanda\" fornece o melhor desempenho e é recomendado para a maioria dos sites."
 
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
 msgid "Individual Name Fields"
@@ -3176,7 +3177,7 @@ msgstr "Quando habilitado, os contatos que estejam atribuídos às atividades re
 msgid ""
 "When enabled, the assignee notification sent out above will also include an "
 "ical meeting invite."
-msgstr ""
+msgstr "Quando habilitado, a notificação ao designado enviada acima também incluirá um convite de evento ical."
 
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
 msgid ""
@@ -3232,15 +3233,15 @@ msgstr "Rótulo para o relacionamento do Contato B para o Contato A. Exemplo: Co
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid ""
 "WARNING: You are about to delete the Reminder titled <strong>%1</strong>."
-msgstr ""
+msgstr "AVISO: Você vai excluir o Lembrete intitulado <strong>%1</strong>."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Enable repetition."
-msgstr ""
+msgstr "Habilitar repetição."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "You can manually send out the reminders to these recipients."
-msgstr ""
+msgstr "Você pode enviar manualmente os lembretes para esses destinatários."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Email Screen"
@@ -3411,7 +3412,7 @@ msgid ""
 " override this default setting and define the range of allowed dates for "
 "specific field types at <a href=\"%1\">Administer > Customize Data and "
 "Screens > Date Preferences</a>"
-msgstr ""
+msgstr "Use esta tela para configurar formatos padrão para os campos de visualização da data de entrada e data de todo o site. Configurações de usar especificadores padrão POSIX. Novas instalações são pré-configurados com formatos padrão dos Estados Unidos. Você pode substituir essa configuração padrão e definir o intervalo de datas permitidos para tipos de campos específicos em <a href=\"%1\">Administrar > Personalizar dados e Telas > Preferências Data</a>"
 
 #: templates/CRM/Admin/Form/Setting/Date.tpl
 msgid "Date Display"
