po: update po/pt_BR/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/menu.po
+++ b/po/pt_BR/menu.po
@@ -9,6 +9,7 @@
 # Enrico Nicoletto <enrico.BR@gmx.co.uk>, 2013
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2011, 2012
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2013
+# Gabriel Almeida <gabrieel@email.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Ricardo Sá <ricardofgsa@gmail.com>, 2016
 # Samir Young Jun Zampiva <samireu@gmail.com>, 2013
@@ -17,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-14 18:02+0000\n"
+"Last-Translator: Gabriel Almeida <gabrieel@email.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2159,11 +2160,11 @@ msgstr "Relatório detalhado para prospecção, fone-banking, listas de percurso
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Payment Methods"
-msgstr ""
+msgstr "Métodos de Pagametos"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
-msgstr ""
+msgstr "Configurar CKEditor"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
@@ -2171,54 +2172,54 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Insert CiviCRM Content"
-msgstr ""
+msgstr "Inserir Conteúdo CiviCRM "
 
 msgctxt "menu"
 msgid "Self-service Registration Update"
-msgstr ""
+msgstr "Atualização de Cadastro de Auto-atendimento"
 
 msgctxt "menu"
 msgid "Self-service Registration Transfer"
-msgstr ""
+msgstr "Transferência de Registro de Auto-atendimento"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "System Status"
-msgstr ""
+msgstr "Status do sistema"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Components"
-msgstr ""
+msgstr "Componentes"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Extensions"
-msgstr ""
+msgstr "Extenções"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Details"
-msgstr ""
+msgstr "Detalhes da Atividade"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Summary"
-msgstr ""
+msgstr "Resumo da atividade"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Shows activity statistics by type / date"
-msgstr ""
+msgstr "Mostra estatísticas de atividade por Tipo/Data"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledge Detail"
-msgstr ""
+msgstr "Detalhe de Promessas"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "List of pledges including amount pledged, pledge status, next payment date, "
 "balance due, total amount paid etc."
-msgstr ""
+msgstr "Lista dos compromissos, incluindo a quantia prometida, situação do compromisso, próxima data de pagamento, saldo devido, quantia total paga, etc."
