--- a/po/sv_SE/campaign.po
+++ b/po/sv_SE/campaign.po
@@ -5,13 +5,13 @@
 # Translators:
 # Jonathan S <jonathan.c.strom@gmail.com>, 2016
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015-2016
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2015
+# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-15 09:30+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -681,7 +681,7 @@ msgstr[1] "%count Dagar"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "view result set"
-msgstr ""
+msgstr "visa resultatmängd"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Incomplete. Click to configure result set."
