po: update po/sv_SE/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/report.po
+++ b/po/sv_SE/report.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-15 10:50+0000\n"
+"PO-Revision-Date: 2016-08-15 09:32+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -1492,7 +1492,7 @@ msgstr "Gruppera via kolumner"
 
 #: CRM/Report/Form.php
 msgid "Sorting"
-msgstr ""
+msgstr "Sortering"
 
 #: CRM/Report/Form.php
 msgid "Order by Section"
@@ -2218,7 +2218,7 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Developer"
-msgstr ""
+msgstr "Utvecklare"
 
 #: CRM/Report/Form.php
 msgid "Grand Total"
@@ -2230,7 +2230,7 @@ msgstr "Uppdatera resultat"
 
 #: CRM/Report/Form.php
 msgid "View results"
-msgstr ""
+msgstr "Visa resultat"
 
 #: CRM/Report/Info.php
 msgid "view report sql"
