po: update po/de_DE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/admin.po
+++ b/po/de_DE/admin.po
@@ -11,7 +11,7 @@
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2014
 # Dipti Kadu <diptikadufin@gmail.com>, 2015
 # pantteri, 2013
-# Ettore Atalan <atalanttore@googlemail.com>, 2014-2015
+# Ettore Atalan <atalanttore@googlemail.com>, 2014-2016
 # Fabian <schuttenberg@systopia.de>, 2013-2016
 # Finn F <ffmoto95@gmail.com>, 2016
 # gnpma100 <gnpma100@gmail.com>, 2014
@@ -36,8 +36,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-02 07:38+0000\n"
-"Last-Translator: Finn F <ffmoto95@gmail.com>\n"
+"PO-Revision-Date: 2016-08-16 08:51+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1609,7 +1609,7 @@ msgstr "Sichere URLs erzwingen (SSL)"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Verify SSL Certs"
-msgstr "Verifiziere SSL-Zertifikate"
+msgstr "SSL-Zertifikate verifizieren"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid ""
@@ -4157,7 +4157,7 @@ msgstr "Dies ist der Name Ihrer Website bei einer Multisite-Installation."
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "Force SSL"
-msgstr ""
+msgstr "SSL erzwingen"
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid ""
@@ -4189,7 +4189,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "Verify SSL Certificates"
-msgstr ""
+msgstr "SSL-Zertifikate verifizieren"
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid ""
@@ -4214,7 +4214,7 @@ msgstr "Die Überprüfung des SSL-Zertifikats trägt dazu bei, sicher zu gehen, 
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "Resource URL"
-msgstr ""
+msgstr "Ressourcen-URL"
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid ""
@@ -4238,7 +4238,7 @@ msgstr "URL des Speicherorts für hochgeladene Bilder."
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "Extensions URL"
-msgstr ""
+msgstr "Erweiterungs-URL"
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "Base URL for extension resources (images, stylesheets, etc)."
@@ -4252,7 +4252,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "Customizing CSS"
-msgstr ""
+msgstr "CSS anpassen"
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid ""
@@ -4368,7 +4368,7 @@ msgstr "Zeile hinzufügen"
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Parameter Name"
-msgstr ""
+msgstr "Parametername"
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Choose a parameter from the list, or select \"other\" for manual entry."
@@ -4389,7 +4389,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Parameter Value"
-msgstr ""
+msgstr "Parameterwert"
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "The following formats are accepted:"
@@ -4521,7 +4521,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "API Params"
-msgstr ""
+msgstr "API-Parameter"
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Source Code"
@@ -5068,7 +5068,7 @@ msgstr "Es sind keine Erweiterungen installiert. Klicken Sie auf das Tab \"Neu h
 
 #: templates/CRM/Admin/Page/Extensions/Refresh.tpl
 msgid "Refresh"
-msgstr ""
+msgstr "Aktualisieren"
 
 #: templates/CRM/Admin/Page/Extensions.tpl
 msgid ""
@@ -5188,7 +5188,7 @@ msgstr "Adresskategorien bieten bequeme Bezeichnungen für verschiedene Standort
 
 #: templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Port"
-msgstr ""
+msgstr "Port"
 
 #: templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Bounce Processing <strong>(Default)</strong>"
