--- a/po/de_DE/financial.po
+++ b/po/de_DE/financial.po
@@ -4,7 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Birdiebln <birdiebln@gmail.com>, 2014
-# Ettore Atalan <atalanttore@googlemail.com>, 2014-2015
+# Ettore Atalan <atalanttore@googlemail.com>, 2014-2016
 # Fabian <schuttenberg@systopia.de>, 2013-2016
 # Freddy Koschinsky <schollator@burning.name>, 2013
 # Frederik Bugglin <frederik.bugglin@gmail.com>, 2016
@@ -18,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-11 14:03+0000\n"
-"Last-Translator: Frederik Bugglin <frederik.bugglin@gmail.com>\n"
+"PO-Revision-Date: 2016-08-16 08:24+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -350,7 +350,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Created ID"
-msgstr ""
+msgstr "Erstellte Kennung"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Expiry Date"
